<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="org.maktab.woocommercemarket.viewModel.ProductListHomeViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragmnet.ProductListsFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/homeTopNewest"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_more_newest" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView_Newest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newest_products"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@+id/button_more_newest"
                app:layout_constraintStart_toStartOf="@+id/homeTopNewest"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button_more_newest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/more"
                app:layout_constraintEnd_toEndOf="@+id/homeTopNewest"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button_more_top_sales"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/more"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/homeTopNewest" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/home_top_sales"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_top_sales">

            </androidx.recyclerview.widget.RecyclerView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView_top_sales"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/top_sales"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@+id/button_more_top_sales"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/button_more_top_sales" />

            <Button
                android:id="@+id/button_more_most_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/more"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/home_top_sales" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView_most_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/mostpoints"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@+id/button_more_most_points"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/button_more_most_points" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/home_most_points"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_most_points">

            </androidx.recyclerview.widget.RecyclerView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>